# atm_coding_challenge

./: CMakeLists.txt  README.md
catch2/: catch.hpp
include/atm/: Controller.hpp
src/: Controller.cpp
tests/: CMakeLists.txt  unit_tests.cpp
ui/: AdminUI.cpp  CMakeLists.txt  UserUI.cpp
